1 flavor event for Savinkov's Russia

--- a/localisation/KR_Russia_Domestic_l_english.yml
+++ b/localisation/KR_Russia_Domestic_l_english.yml
@@ -486,4 +486,8 @@ rusd.137.a:0 "Felix, you have to warn us!"
 
 rusd.138.t:0 "Savinkov's address to the nation."
 rusd.138.d:0 "Boris Savinkov, the closest associate of Supreme Ruler Kornilov, in his radio address to the Russian people announced that, driven by the desire to defend Russia from external and internal enemies, who try to take control over the country. He promised to deal with corruption inside state apparatus, conduct land reform, improve labour legislation and provide further recovery of the state. It seems, that the order finally returned to the country."
-rusd.138.a:0 "Finally..."	
+rusd.138.a:0 "Finally..."
+
+rusd.139.t:0 "The reform of the Senate"
+rusd.139.d:0 "The recent political crisis have shown the need for extensive reform of the governmental apparatus. The Senate is a useless talking shop, many officials are corrupt, local authorities conceal the real situation in their regions. All these problems should be solved as soon as possible. According to the plan, the power vertical will be created, Senate's powers will be restricted, and special control commission will be organised into the state apparatus."
+rusd.139.a:0 "The new Senate will represent the new Russia!"		
