--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -701,7 +701,7 @@ russia.39.d:0 "Lavr Georgiyevich Kornilov, supreme commander in chief and presid
 russia.39.a:0 "The great helmsman of the Russian nation is no more."
 
 russia.40.t:0 "Directive No. 1"
-russia.40.d:0 "With the merger of the offices of president and prime minister, Boris Savinkov continued to solidify his grip over the Russian State by penning Directive No. 1 (also known as the first ‘Vozhd-komanda’). Amongst other things, the directive dismissed the Duma and Senate whilst outlawing all political parties besides Savinkov’s own 'Narodno-Respublikanskaya Partiya Rossii'. Furthermore, the directive raised the Combat Squads to the status of a state organisation and a full-blown branch of the government."
+russia.40.d:0 "With the merger of the offices of president and prime minister, Boris Savinkov continued to solidify his grip over the Russian State by penning Directive No. 1 (also known as the first 'Prikaz Vozhdya'). Amongst other things, the directive dismissed the Duma whilst outlawing all political parties besides Savinkov's own 'Narodno-Respublikanskaya Partiya Rossii'. Furthermore, the directive raised the Combat Squads to the status of a state organisation and a full-blown branch of the government."
 russia.40.a:0 "No shortage of hooks to hang the enemies of the state."
 
 russia.41.t:0 "Kornilov Death"
