--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -213,8 +213,10 @@ ethiopia.23.d:0 "The damned Ethiopians have seized our Somaliland holdings that 
 ethiopia.23.a:0 "To war!"
 ethiopia.23.b:0 "It was just some sand anyway"
 ethiopia.24.t:0 "Ethiopia seizes German Somaliland!"
-ethiopia.24.d:0 "The Ethiopians have marched their troops into German Somaliland and are proclaiming it theirs! The Germans, calling an emergency conference of their highest officials, have decided to let the Ethiopians take it without going to war."
-ethiopia.24.a:0 "An Interesting Development"
+ethiopia.24.d:0 "The Ethiopians have marched their troops into German Somaliland and are proclaiming it theirs! The Germans, calling an emergency conference of their highest officials, have decided to let the Ethiopians take it, choosing to file a diplomatic complain instead of going to war. The Ethiopian leader, Haile Selassie, has stated in his speech of victory that he cares not for the complaint, especially from a crippled Germany, further adding 'The rightfull anexation is indeed a victory for the African People, one that will keep the Pan-African Dream alive!'"
+ethiopia.24.a:0 "Rejoice!"
+ethiopia.24.b:0 "An Interesting Development"
 ethiopia.25.t:0 "Ethiopia seizes German Somaliland!"
-ethiopia.25.d:0 "The Ethiopians have marched their troops into German Somaliland and are proclaiming it theirs! The Germans, calling an emergency conference of their highest officials, have decided that this could not be tolerated, and have chosen to go to war with Ethiopia. Many are calling it a foolish move - an already shattered Germany has no chance against the last free nation of Africa. Ethiopia."
-ethiopia.25.a:0 "An Unexpected Development"
+ethiopia.25.d:0 "The Ethiopians have marched their troops into German Somaliland and are proclaiming it theirs! The Germans, calling an emergency conference of their highest officials, have decided that this could not be tolerated, and have chosen to go to war with Ethiopia. Many are calling it a foolish move - an already shattered Germany has little to give against the newly industrialised and reformed Ethiopia, which insists they have a plan for this situation."
+ethiopia.25.a:0 "We have a plan for this, didn't we?"
+ethiopia.25.b:0 "An Unexpected Development"
