--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -136,20 +136,20 @@ FRA2_FOR_ANAR:0 "Sorelian Foreign Policy in the 1941 Elections"
 FRA2_FOR_JACO:0 "Jacobin Foreign Policy in the 1941 Elections"
 FRA2_FOR_SORE:0 "Anarchiste Foreign Policy in the 1941 Elections"
 
-FRA_amenagement:0 "Aménagement of the Territory"
-FRA_amenagement_desc:0 "-"
+FRA_amenagement:0 "Aménagement du Territoire"
+FRA_amenagement_desc:0 "Our territory is vast and unequally developed, leaving some regions away from the economic prosperity of the country. We must encourage initiatives to solve that problem on a local and federal level."
 FRA_hydroelectricity:0 "Hydroelectricity"
-FRA_hydroelectricity_desc:0 "-"
+FRA_hydroelectricity_desc:0 "Our mountainous regions in the east and the south have plenty of high-flow rivers, a perfect environment to install a clean and lasting source of energy and dynamise some backwards regions of the Commune."
 FRA_swiss_hydroelectricity:0 "Swiss Hydroelectricity"
-FRA_swiss_hydroelectricity_desc:0 "-"
+FRA_swiss_hydroelectricity_desc:0 "Our recent integration of Romandie into the Commune lead us to find several perfect spots for hydroelectricity, especially in Valais. Our leading engineers think that expanding our dams in the region would be greatly beneficial."
 FRA_chemins_de_fer:0 "Office des Chemins de Fer"
-FRA_chemins_de_fer_desc:0 "-"
+FRA_chemins_de_fer_desc:0 "A congress over the infrastructure status at the BGT showed the disorganisation of our rail system and how backwards it became. The congress agreed on the need to create a new office specifically designed for the development and the maintenance of our railways to connect all the parts of France together."
 FRA_mining_expansion:0 "Mining Expansion"
-FRA_mining_expansion_desc:0 "-"
+FRA_mining_expansion_desc:0 "The economic and infrastructural development of the regions of the Alps and the Massif Central allowed for a greater exploitation of the resources available there. We discovered new mineral deposits and are now ready to start exploiting them!"
 FRA_plan_prost:0 "Plan Prost"
-FRA_plan_prost_desc:0 "-"
+FRA_plan_prost_desc:0 "The enginner and urbanist Henri Prost, member of the commission for the Aménagement du Territoire came up with a plan to develop highways around the Parisian region to link the suburbs and allow for bigger plans later on. This idea was not only supported but the BGT also decided to fund new projects concerning the expansion of high-speed roads in the Commune. It's said that communes like Marseille and Lyon already asked him to design highway development plans in their respective communes."
 FRA_autoroutes:0 "The Autoroutes"
-FRA_autoroutes_desc:0 "-"
+FRA_autoroutes_desc:0 "The highways proved their efficiency in close urban areas, now they are to be expanded in the whole country! Liking the biggest communes better can only benefit the revolution."
 
 FRA_eco_direction:0 "Direction of the Economy"
 FRA_eco_direction_desc:0 "Our economy needs to be directed with a firm hand and a distinct policy from one of the Commune's faction."
