Minor changes to the Swedish tree.
+ Infantry weapons
+ Motorized/Mechanized
+ AA

--- a/localisation/KR_Equipment_l_english.yml
+++ b/localisation/KR_Equipment_l_english.yml
@@ -1132,20 +1132,28 @@ USA_modern_tank_equipment_1_short:0 "Patton"
 
 #Infantry Equip
 
-SWE_infantry_equipment_0:0 "Mauser m/38"
-SWE_infantry_equipment_0_short:0 "Mauser m/38"
-SWE_infantry_equipment_1:0 "Ag m/42"
+SWE_infantry_equipment_0:0 "6,5mm Gevär m/1896"
+SWE_infantry_equipment_0_short:0 "Gevär m/96"
+SWE_infantry_equipment_1:0 "Automatgevär m/42"
 SWE_infantry_equipment_1_short:0 "Ag m/42"
-SWE_infantry_equipment_2:0 "Kpist m/37-39"
-SWE_infantry_equipment_2_short:0 "Kpist m/37-39"
-SWE_infantry_equipment_3:0 "Kpist m/45"
-SWE_infantry_equipment_3_short:0 "Kpist m/45"
+SWE_infantry_equipment_2:0 "Kulsprutepistol m/45 Carl Gustav"
+SWE_infantry_equipment_2_short:0 "Kpist m/45"
+SWE_infantry_equipment_3:0 "Automatkarbin 4"
+SWE_infantry_equipment_3_short:0 "Ak 4"
 
 #Motorised
 
 SWE_motorized_equipment_1:0 "Scania-Vabis"
-SWE_mechanized_equipment_3:0 "Terrängbil m/42 KP"
-SWE_mechanized_equipment_3_short:0 "m/42 KP"
+SWE_motorized_equipment_1_desc:0 "While cavalry have for a long time been a reliable asset to our army, replacing horses with trucks will allow us to quickly deliver a large amount of infantry at the frontline"
+SWE_mechanized_equipment_1:0 "Terrängbil"
+SWE_mechanized_equipment_1_short:0 "Terrängbil"
+SWE_mechanized_equipment_1_desc:0 "Specialized vehicles that work well in rough terrain and has a degree of armor plating will ensure that our boys in green can effectively transport themselves around the battlefield."
+SWE_mechanized_equipment_2:0 "Pansarfordon"
+SWE_mechanized_equipment_2_short:0 "Pansarfordon"
+SWE_mechanized_equipment_2_desc:0 "A tracked vehicle similar to a tank but with a capacity to carry a small platoon will further increase our capabilities."
+SWE_mechanized_equipment_3:0 "Pansarskyttefordon"
+SWE_mechanized_equipment_3_short:0 "Pansarskyttefordon"
+SWE_mechanized_equipment_3_desc:0 "Our infantry can be even further enchanced by outfitting the transport vehicles themselves with weaponry."
 
 #Artillery
 
@@ -1161,10 +1169,15 @@ SWE_anti_tank_equipment_2_short:0 "57mm pvkan."
 SWE_anti_tank_equipment_3:0 "75mm pansarvärnskanon m/43"
 SWE_anti_tank_equipment_3_short:0 "75mm pvkan m/43"
 
-SWE_anti_air_equipment_1:0 "20 mm maskinkanon m/40"
-SWE_anti_air_equipment_1_short:0 "20mm m/40"
-SWE_anti_air_equipment_2:0 "40 mm lvakan m/36"
-SWE_anti_air_equipment_3:0 "8 cm luftvärnskanon m/30"
+SWE_anti_air_equipment_1:0 "8mm Luftvärnskulspruta m/36"
+SWE_anti_air_equipment_1_short:0 "8mm Lvksp m/36"
+SWE_anti_air_equipment_1_desc:0 "From what we saw during the Weltkrieg, automatic fire is the bane of aircraft. A double mount of heavy machineguns chambered in 8x63mm will provide some decent anti-air capabilities for the time being."
+SWE_anti_air_equipment_2:0 "Bofors 20mm Automatkanon"
+SWE_anti_air_equipment_2_short:0 "20mm Lvakan m/40"
+SWE_anti_air_equipment_2_desc:0 "Instead of a machinegun, a dedicated anti-air cannon will serve our forces much good. The invention of a mobile small-caliber cannon that fires explosive shells will come in handy when we have to swat enemy flies out of the sky."
+SWE_anti_air_equipment_3:0 "Bofors 40mm Automatkanon"
+SWE_anti_air_equipment_3_short:0 "40mm Lvakan m/48"
+SWE_anti_air_equipment_3_desc:0 "Death from above is becoming an increasingly common way to describe air strikes, but in this case death also comes from below. A 40mm cannon will not only do devastating damage against all aircraft, but can also be turned to decimate ground forces."
 
 #Tanks
 
