A few more spelling fixes

--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -139,7 +139,7 @@ FRA2_FOR_SORE:0 "Anarchiste Foreign Policy in the 1941 Elections"
 FRA_amenagement:0 "Aménagement du Territoire"
 FRA_amenagement_desc:0 "Our territory is vast and unequally developed, leaving some regions away from the economic prosperity of the country. We must encourage initiatives to solve that problem on a local and federal level."
 FRA_hydroelectricity:0 "Hydroelectricity"
-FRA_hydroelectricity_desc:0 "Our mountainous regions in the east and the south have plenty of high-flow rivers, a perfect environment to install a clean and lasting source of energy and dynamise some backwards regions of the Commune."
+FRA_hydroelectricity_desc:0 "Our mountainous regions in the east and the south have plenty of high-flow rivers, a perfect environment to install a clean and lasting source of energy and revitalise some backwards regions of the Commune."
 FRA_swiss_hydroelectricity:0 "Swiss Hydroelectricity"
 FRA_swiss_hydroelectricity_desc:0 "Our recent integration of Romandie into the Commune lead us to find several perfect spots for hydroelectricity, especially in Valais. Our leading engineers think that expanding our dams in the region would be greatly beneficial."
 FRA_chemins_de_fer:0 "Office des Chemins de Fer"
@@ -147,7 +147,7 @@ FRA_chemins_de_fer_desc:0 "A congress over the infrastructure status at the BGT 
 FRA_mining_expansion:0 "Mining Expansion"
 FRA_mining_expansion_desc:0 "The economic and infrastructural development of the regions of the Alps and the Massif Central allowed for a greater exploitation of the resources available there. We discovered new mineral deposits and are now ready to start exploiting them!"
 FRA_plan_prost:0 "Plan Prost"
-FRA_plan_prost_desc:0 "The enginner and urbanist Henri Prost, member of the commission for the Aménagement du Territoire came up with a plan to develop highways around the Parisian region to link the suburbs and allow for bigger plans later on. This idea was not only supported but the BGT also decided to fund new projects concerning the expansion of high-speed roads in the Commune. It's said that communes like Marseille and Lyon already asked him to design highway development plans in their respective communes."
+FRA_plan_prost_desc:0 "The engineer and urbanist Henri Prost, member of the commission for the Aménagement du Territoire came up with a plan to develop highways around the Parisian region to link the suburbs and allow for bigger plans later on. This idea was not only supported but the BGT also decided to fund new projects concerning the expansion of high-speed roads in the Commune. It's said that communes like Marseille and Lyon already asked him to design highway development plans in their respective communes."
 FRA_autoroutes:0 "The Autoroutes"
 FRA_autoroutes_desc:0 "The highways proved their efficiency in close urban areas, now they are to be expanded in the whole country! Liking the biggest communes better can only benefit the revolution."
 
@@ -246,7 +246,7 @@ FRA_Our_time_has_come_desc:0 "Revanchism is a sentiment that originates from the
 FRA_department_revolutionary_ideals:0 "Department of Revolutionary Ideals"
 FRA_department_revolutionary_ideals_desc:0 "-"
 FRA_Blanqui_Research_Institute:0 "Blanqui Research Institute"
-FRA_Blanqui_Research_Institute_desc:0 "While some nations resist the ways of science, France endorses them. Let´s support the establishment of a new research institute aimed at our technological superiority."
+FRA_Blanqui_Research_Institute_desc:0 "While some nations resist the ways of science, France endorses them. Let's support the establishment of a new research institute aimed at our technological superiority."
 FRA_military_buildup_three: "Further Military Development"
 FRA_military_buildup_three_desc:0 "Our economy is now developing well and the Commune is ready for war but we can do even better. By encouraging further projects to develop our industry the Commune shall not only be ready for war but shall also be indisputably superior to any of our enemies!"
 FRA_military_science: "Military Science"
@@ -260,7 +260,7 @@ FRA_damocles_desc:0 "Inspired by the Cambridge Conference which took place durin
 FRA_damocles_tooltip:0 "§YGives 2x§! §G50%§! Research bonus for: §YNuclear Technology§! if Britain accepts"
 damocles_refused:0 "Britain refused the Damocles Project"
 FRA_nuclear_weapons:0 "Curie Project"
-FRA_nuclear_weapons_desc:0 "There is much we can learn by researching power of an atom. Let´s provide necessary funding for our atomic researchers."
+FRA_nuclear_weapons_desc:0 "There is much we can learn by researching power of an atom. Let's provide necessary funding for our atomic researchers."
 FRA_German_borders:0 "Fortify the German Border"
 FRA_German_borders_desc:0 "Our eastern defences are formidable, but they cannot withstand a concentrated attack. Fortifying this area will surely prove useful."
 FRA_extend_line:0 "Extend the Line"
@@ -370,7 +370,7 @@ FRA_protect_coastlines:0 "Protect our Coastlines"
 FRA_protect_coastlines_desc:0 "-"
 
 FRA_Phalanstere_internationale:0 "Found the Phalanstère International"
-FRA_Phalanstere_internationale_desc:0 "Let´s initiate a program aimed at aiding other socialist states all over the world by helping them build up their industry."
+FRA_Phalanstere_internationale_desc:0 "Let's initiate a program aimed at aiding other socialist states all over the world by helping them build up their industry."
 FRA_Develop_Italy:0 "Develop the Socialist Republic of Italy"
 FRA_Develop_Italy_desc:0 "Our Italian comrades have applied to join the Phalanstère International. With the zealous, Habsburg-backed Italian Federation threatening Sicilian borders, it is only proper to help our comrades in their struggle."
 FRA_Develop_Spain:0 "Develop Spanish Federation"
@@ -387,7 +387,7 @@ FRA_Develop_Ukraine:0 "Develop Ukraine"
 FRA_Develop_Ukraine_desc:0 "Our Ukrainian comrades have applied to join the Phalanstère International. With socialism in Ukraine bordering on the resurgent Russia and the constantly hostile Germany, it is only proper to help our comrades in their struggle."
 
 comfrance.1.t:0 "The Commune of France"
-comfrance.1.d:0 "The Third Republic ended in the way it began: defeated by German arms, and facing Communist Revolution at home. In the November of 1919, a revolutionary General Strike was called by the CGT, paralysing the country and causing the downfall of the bourgeois government. ‘The Party of Order’ was not strong enough to put an end to the unrest and in the following months the ‘Establishment’ was forced out of France by a coalition of leftist forces in a brief but brutal civil war. \n\nFor the past 15 years, the self-styled ‘Commune of France’ has united behind a common platform of Syndicalist-Socialist consensus, headed by the ruling Comité de Salut Public. However, by 1936, the consensus that was resolved to rebuild the shattered country and defend the fruits of revolution from foreign menace is deemed as outdated by many critics, and there is a growing call for more radical policies. France is increasingly confident in her security and in her mission, but the French revolutionary tradition is varied, and it is unclear precisely which strands shall become dominant in the years to come..."
+comfrance.1.d:0 "The Third Republic ended in the way it began: defeated by German arms, and facing Communist Revolution at home. In the November of 1919, a revolutionary General Strike was called by the CGT, paralysing the country and causing the downfall of the bourgeois government. 'The Party of Order' was not strong enough to put an end to the unrest and in the following months the ‘Establishment’ was forced out of France by a coalition of leftist forces in a brief but brutal civil war. \n\nFor the past 15 years, the self-styled 'Commune of France' has united behind a common platform of Syndicalist-Socialist consensus, headed by the ruling Comité de Salut Public. However, by 1936, the consensus that was resolved to rebuild the shattered country and defend the fruits of revolution from foreign menace is deemed as outdated by many critics, and there is a growing call for more radical policies. France is increasingly confident in her security and in her mission, but the French revolutionary tradition is varied, and it is unclear precisely which strands shall become dominant in the years to come..."
 comfrance.1.a:0 "Interesting"
 
 comfrance.5.t:0 "The Fall of Marceau Pivert"
@@ -610,7 +610,7 @@ comfrance.59.a:0 "Okay"
 comfrance.60.t:0 "France shows its true face"
 comfrance.60.d:0 "The Reds are clearly set to spread their poison as they have clearly shown during last session of the Elections! We must be prepared for anything...!"
 comfrance.60.a:0 "We must be ready..."
-comfrance.61.t:0 "The Syndicalists’ first move"
+comfrance.61.t:0 "The Syndicalists first move"
 comfrance.61.d:0 "The Reds are meeting to coordinate their activities, which are definitively aimed against order we have established in Europe following our victory in Weltkrieg. We must watch this meeting and analyse its results closely!"
 comfrance.61.a:0 "Watch them!"
 comfrance.62.t:0 "French Military Support"
