--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -73,7 +73,7 @@ ETH_Repair_Railways_desc:0 "We recently purchased the DPAEB railroads from Germa
 ETH_Reform_Railways:0 "Reform the Railroads"
 ETH_Reform_Railways_desc:0 "In order to help our economy, it would be a wise move to lay more branch lines out to the countryside and to the sea"
 ETH_Seize_Ger_Som:0 "Seize German Somaliland"
-ETH_Seize_Ger_Som_desc:0 "The Germans took land that was rightly ours in the first Weitkrieg. We must now take it back from them!"
+ETH_Seize_Ger_Som_desc:0 "The Germans took land that was rightly ours in the first Weltkrieg. We must now take it back from them!"
 ETH_Intergrate_Ger_Som:0 "Integrate German Somaliland"
 ETH_Intergrate_Ger_Som_desc:0 "Now we have seized German Somaliland we must integrate it into glorious Ethiopia!"
 ETH_Navy:0 "A Navy for Ethiopia"
@@ -209,11 +209,11 @@ ethiopia.22.c:0 "United Ethiopian Democratic Forces"
 ethiopia.22.e:0 "Coalition for Unity and Democracy"
 ethiopia.22.f:0 "Ethiopian People's Democratic Front"
 ethiopia.23.t:0 "Ethiopia seizes German Somaliland!"
-ethiopia.23.d:0 "The damned Ethiopians have seized our Somaliland holdings that we fought bravely for in the First Weitkrieg!"
+ethiopia.23.d:0 "The damned Ethiopians have seized our Somaliland holdings that we fought bravely for in the First Weltkrieg!"
 ethiopia.23.a:0 "To war!"
 ethiopia.23.b:0 "It was just some sand anyway"
 ethiopia.24.t:0 "Ethiopia seizes German Somaliland!"
-ethiopia.24.d:0 "The Ethiopians have marched their troops into German Somaliland and are proclaiming it theirs! The Germans, calling an emergency conference of their highest officials, have decided to let the Ethiopians take it, choosing to file a diplomatic complain instead of going to war. The Ethiopian leader, Haile Selassie, has stated in his speech of victory that he cares not for the complaint, especially from a crippled Germany, further adding 'The rightfull anexation is indeed a victory for the African People, one that will keep the Pan-African Dream alive!'"
+ethiopia.24.d:0 "The Ethiopians have marched their troops into German Somaliland and are proclaiming it theirs! The Germans, calling an emergency conference of their highest officials, have decided to let the Ethiopians take it, choosing to file a diplomatic complain instead of going to war. The Ethiopian leader, Haile Selassie, has stated in his speech of victory that he cares not for the complaint, especially from a crippled Germany, further adding 'The rightful annexation is indeed a victory for the African People, one that will keep the Pan-African Dream alive!'"
 ethiopia.24.a:0 "Rejoice!"
 ethiopia.24.b:0 "An Interesting Development"
 ethiopia.25.t:0 "Ethiopia seizes German Somaliland!"
