--- a/localisation/KR_Russia_Domestic_l_english.yml
+++ b/localisation/KR_Russia_Domestic_l_english.yml
@@ -280,11 +280,11 @@ rusd.79.a:0 "Trubetskoy's Civilian conservatives."
 rusd.79.b:0 "Denikin's Siloviki conservatives."
 rusd.79.c:0 "The Kadet-Liberal Coalition."
 
-rusd.80.t:0 "The Presidental Elections of 1942"
+rusd.80.t:0 "The Presidential Elections of 1942"
 rusd.80.d:0 "The time has come to elect a new President to replace the late Dmitri Pavlovich Romanov. All major forces in the country have put forward their candidates and the Senate is ready to assemble to vote on the new President."
 rusd.80.c:0 "Alexei Arkhangelskiy, a conservative candidate."
 
-rusd.81.t:0 "The Presidental Elections of 1943"
+rusd.81.t:0 "The Presidential Elections of 1943"
 rusd.81.d:0 "The time has come to elect a new President. All major forces in the country have put forward their candidates and the Senate is ready to assemble to vote on the new President."
 
 rusd.82.t:0 "The XI Duma Elections"
@@ -300,10 +300,10 @@ rusd.91.a:0 "A Kadet-Liberal coalition."
 rusd.91.b:0 "The Social Revolutionaries."
 rusd.91.c:0 "Trubetskoy's conservatives."
 
-rusd.94.t:0 "The Presidental Elections of 1948"
+rusd.94.t:0 "The Presidential Elections of 1948"
 rusd.94.b:0 "Ariadna V. Tyrkova-Williams"
 
-rusd.95.t:0 "The Presidental Elections of 1949"
+rusd.95.t:0 "The Presidential Elections of 1949"
 
 rusd.96.t:0 "Anton Denikin dies"
 rusd.96.d:0 "A Hero of the Civil War and the informal leader of Russian conservatives, Anton Ivanovich Denikin, died yesterday in his manor. Although never as radical as his counterpart, Baron Wrangel, Denikin's influence throughout Russia was hard to overestimate. A week of national mourning has been declared as the people bade farewell to one of the few true Heroes of Russia. Grand Admiral Vasily Kanin has been selected to replace him as the head of the Siloviki."
@@ -360,7 +360,7 @@ rusd.104.a:0 "Farewell, Dmitri Pavlovich!"
 rusd.104.b:0 "According to the constitution, his duties should be taken over by the Senate until the time for elections comes next year."
 
 rusd.105.t:0 "Ivan Pavlov dies"
-rusd.105.d:0 "Ivan Petrovich Pavlov, the widely known Russian physiologist, died today at 86 in Saint-Petersburg. He recieved the Nobel Prize in Medicine in 1904 for his research on the digestive system but he is mostly known for his works on classical conditioning. The Russian President expressed his sadness and announced that his laboratory would soon become a museum."
+rusd.105.d:0 "Ivan Petrovich Pavlov, the widely known Russian physiologist, died today at 86 in Saint-Petersburg. He received the Nobel Prize in Medicine in 1904 for his research on the digestive system but he is mostly known for his works on classical conditioning. The Russian President expressed his sadness and announced that his laboratory would soon become a museum."
 rusd.105.a:0 "Let's hope that classical conditioning works on humans."
 
 rusd.106.t:0 "Maxim Gorky dies"
