African revolters added + Totalist CHL dude

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -6839,3 +6839,223 @@ TRV_syndicalist_DEF:0 "The Travancore Commune"
 TRV_totalist:0 "Travancore Commune"
 TRV_totalist_ADJ:0 "Travancorean"
 TRV_totalist_DEF:0 "The Travancore Commune"
+
+BRD_authoritarian_democrat:0 "Kingdom of Burundi"
+BRD_authoritarian_democrat_ADJ:0 "Burundi"
+BRD_authoritarian_democrat_DEF:0 "Kingdom of Burundi"
+BRD_market_liberal:0 "Burundi Republic"
+BRD_market_liberal_ADJ:0 "Burundi"
+BRD_market_liberal_DEF:0 "The Burundi Republic"
+BRD_national_populist:0 "Kingdom of Burundi"
+BRD_national_populist_ADJ:0 "Burundi"
+BRD_national_populist_DEF:0 "Kingdom of Burundi"
+BRD_paternal_autocrat:0 "Kingdom of Burundi"
+BRD_paternal_autocrat_ADJ:0 "Burundi"
+BRD_paternal_autocrat_DEF:0 "Kingdom of Burundi"
+BRD_radical_socialist:0 "Burundi Commune"
+BRD_radical_socialist_ADJ:0 "Burundi"
+BRD_radical_socialist_DEF:0 "The Burundi Commune"
+BRD_social_conservative:0 "Burundi State"
+BRD_social_conservative_ADJ:0 "Burundi"
+BRD_social_conservative_DEF:0 "Burundi State"
+BRD_social_democrat:0 "Burundi"
+BRD_social_democrat_ADJ:0 "Burundi"
+BRD_social_democrat_DEF:0 "Burundi"
+BRD_social_liberal:0 "Burundi Republic"
+BRD_social_liberal_ADJ:0 "Burundi"
+BRD_social_liberal_DEF:0 "The Burundi Republic"
+BRD_syndicalist:0 "Burundi Commune"
+BRD_syndicalist_ADJ:0 "Burundi"
+BRD_syndicalist_DEF:0 "The Burundi Commune"
+BRD_totalist:0 "Burundi Commune"
+BRD_totalist_ADJ:0 "Burundi"
+BRD_totalist_DEF:0 "The Burundi Commune"
+
+DAH_authoritarian_democrat:0 "Kingdom of Dahomey"
+DAH_authoritarian_democrat_ADJ:0 "Dahomey"
+DAH_authoritarian_democrat_DEF:0 "Kingdom of Dahomey"
+DAH_market_liberal:0 "Dahomey Republic"
+DAH_market_liberal_ADJ:0 "Dahomey"
+DAH_market_liberal_DEF:0 "The Dahomey Republic"
+DAH_national_populist:0 "Empire of Dahomey"
+DAH_national_populist_ADJ:0 "Dahomey"
+DAH_national_populist_DEF:0 "Empire of Dahomey"
+DAH_paternal_autocrat:0 "Kingdom of Dahomey"
+DAH_paternal_autocrat_ADJ:0 "Dahomey"
+DAH_paternal_autocrat_DEF:0 "Kingdom of Dahomey"
+DAH_radical_socialist:0 "Dahomey Commune"
+DAH_radical_socialist_ADJ:0 "Dahomey"
+DAH_radical_socialist_DEF:0 "The Dahomey Commune"
+DAH_social_conservative:0 "Dahomey State"
+DAH_social_conservative_ADJ:0 "Dahomey"
+DAH_social_conservative_DEF:0 "Dahomey State"
+DAH_social_democrat:0 "Dahomey"
+DAH_social_democrat_ADJ:0 "Dahomey"
+DAH_social_democrat_DEF:0 "Dahomey"
+DAH_social_liberal:0 "Dahomey Republic"
+DAH_social_liberal_ADJ:0 "Dahomey"
+DAH_social_liberal_DEF:0 "The Dahomey Republic"
+DAH_syndicalist:0 "Dahomey Commune"
+DAH_syndicalist_ADJ:0 "Dahomey"
+DAH_syndicalist_DEF:0 "The Dahomey Commune"
+DAH_totalist:0 "Dahomey Commune"
+DAH_totalist_ADJ:0 "Dahomey"
+DAH_totalist_DEF:0 "The Dahomey Commune"
+
+
+HAU_authoritarian_democrat:0 "Hausaland"
+HAU_authoritarian_democrat_ADJ:0 "Hausa"
+HAU_authoritarian_democrat_DEF:0 "Hausaland"
+HAU_market_liberal:0 "Hausa Federation"
+HAU_market_liberal_ADJ:0 "Hausa"
+HAU_market_liberal_DEF:0 "Hausa Federation"
+HAU_national_populist:0 "Sokoto Caliphate"
+HAU_national_populist_ADJ:0 "Sokot"
+HAU_national_populist_DEF:0 "Sokoto Caliphate"
+HAU_paternal_autocrat:0 "Hausaland"
+HAU_paternal_autocrat_ADJ:0 "Hausa"
+HAU_paternal_autocrat_DEF:0 "Hausaland"
+HAU_radical_socialist:0 "Socialist Federation of Hausaland"
+HAU_radical_socialist_ADJ:0 "Hausa"
+HAU_radical_socialist_DEF:0 "Socialist Federation of Hausaland"
+HAU_social_conservative:0 "Hausa Federation"
+HAU_social_conservative_ADJ:0 "Hausa"
+HAU_social_conservative_DEF:0 "Hausa Federation"
+HAU_social_democrat:0 "Hausa Federation"
+HAU_social_democrat_ADJ:0 "Hausa"
+HAU_social_democrat_DEF:0 "Hausa Federation"
+HAU_social_liberal:0 "Hausa Federation"
+HAU_social_liberal_ADJ:0 "Hausa"
+HAU_social_liberal_DEF:0 "Hausa Federation"
+HAU_syndicalist:0 "Combined Hausa Communes"
+HAU_syndicalist_ADJ:0 "Hausa"
+HAU_syndicalist_DEF:0 "Combined Hausa Communes"
+HAU_totalist:0 "Hausaland Commune"
+HAU_totalist_ADJ:0 "Hausa"
+HAU_totalist_DEF:0 "Hausaland Commune"
+
+RWD_authoritarian_democrat:0 "Kingdom of Rwanda"
+RWD_authoritarian_democrat_ADJ:0 "Rwandan"
+RWD_authoritarian_democrat_DEF:0 "Kingdom of Rwanda"
+RWD_market_liberal:0 "Republic of Rwanda"
+RWD_market_liberal_ADJ:0 "Rwandan"
+RWD_market_liberal_DEF:0 "Republic of Rwanda"
+RWD_national_populist:0 "Hutu Empire"
+RWD_national_populist_ADJ:0 "Hutu"
+RWD_national_populist_DEF:0 "Hutu Empire"
+RWD_paternal_autocrat:0 "Kingdom of Rwanda"
+RWD_paternal_autocrat_ADJ:0 "Rwandan"
+RWD_paternal_autocrat_DEF:0 "Kingdom of Rwanda"
+RWD_radical_socialist:0"Rwandan Social Republic"
+RWD_radical_socialist_ADJ:0 "Rwandan"
+RWD_radical_socialist_DEF:0 "Rwandan Social Republic"
+RWD_social_conservative:0 "Republic of Rwanda"
+RWD_social_conservative_ADJ:0 "Rwandan"
+RWD_social_conservative_DEF:0 "Republic of Rwanda"
+RWD_social_democrat:0 "Republic of Rwanda"
+RWD_social_democrat_ADJ:0 "Rwandan"
+RWD_social_democrat_DEF:0 "Republic of Rwanda"
+RWD_social_liberal:0 "Republic of Rwanda"
+RWD_social_liberal_ADJ:0 "Rwandan"
+RWD_social_liberal_DEF:0 "Republic of Rwanda"
+RWD_syndicalist:0 "Rwandan Worker's Rule"
+RWD_syndicalist_ADJ:0 "Rwandan"
+RWD_syndicalist_DEF:0 "Rwandan Worker's Rule"
+RWD_totalist:0 "Rwanda Commune"
+RWD_totalist_ADJ:0 "Rwandan"
+RWD_totalist_DEF:0 "Rwanda Commune"
+
+KTG_authoritarian_democrat:0 "Kingdom of Katanga"
+KTG_authoritarian_democrat_ADJ:0 "Katanga"
+KTG_authoritarian_democrat_DEF:0 "Kingdom of Katanga"
+KTG_market_liberal:0 "State of Katanga"
+KTG_market_liberal_ADJ:0 "Katanga"
+KTG_market_liberal_DEF:0 "State of Katanga"
+KTG_national_populist:0 "Kingdom of Katanga"
+KTG_national_populist_ADJ:0 "Katanga"
+KTG_national_populist_DEF:0 "Kingdom of Katanga"
+KTG_paternal_autocrat:0 "Kingdom of Katanga"
+KTG_paternal_autocrat_ADJ:0 "Katanga"
+KTG_paternal_autocrat_DEF:0 "Kingdom of Katanga"
+KTG_radical_socialist:0 "State of Katanga"
+KTG_radical_socialist_ADJ:0 "Katanga"
+KTG_radical_socialist_DEF:0 "State of Katanga"
+KTG_social_conservative:0 "Kingdom of Katanga"
+KTG_social_conservative_ADJ:0 "Katanga"
+KTG_social_conservative_DEF:0 "Kingdom of Katanga"
+KTG_social_democrat:0 "State of Katanga"
+KTG_social_democrat_ADJ:0 "Katanga"
+KTG_social_democrat_DEF:0 "State of Katanga"
+KTG_social_liberal:0 "State of Katanga"
+KTG_social_liberal_ADJ:0 "Katanga"
+KTG_social_liberal_DEF:0 "State of Katanga"
+KTG_syndicalist:0 "State of Katanga"
+KTG_syndicalist_ADJ:0 "Katanga"
+KTG_syndicalist_DEF:0 "State of Katanga"
+KTG_totalist:0 "State of Katanga"
+KTG_totalist_ADJ:0 "Katanga"
+KTG_totalist_DEF:0 "State of Katanga"
+
+TOG_authoritarian_democrat:0 "Togoland"
+TOG_authoritarian_democrat_ADJ:0 "Togolese"
+TOG_authoritarian_democrat_DEF:0 "Togoland"
+TOG_market_liberal:0 "Togolese Federation"
+TOG_market_liberal_ADJ:0 "Togolese"
+TOG_market_liberal_DEF:0 "Togolese Federation"
+TOG_national_populist:0 "Togo"
+TOG_national_populist_ADJ:0 "Togolese"
+TOG_national_populist_DEF:0 "Togo"
+TOG_paternal_autocrat:0 "Togoland"
+TOG_paternal_autocrat_ADJ:0 "Togolese"
+TOG_paternal_autocrat_DEF:0 "Togoland"
+TOG_radical_socialist:0 "Socialist Federation of Togoland"
+TOG_radical_socialist_ADJ:0 "Togolese"
+TOG_radical_socialist_DEF:0 "Socialist Federation of Togoland"
+TOG_social_conservative:0 "Togo Federation"
+TOG_social_conservative_ADJ:0 "Togolese"
+TOG_social_conservative_DEF:0 "Togo Federation"
+TOG_social_democrat:0 "Togolese Federation"
+TOG_social_democrat_ADJ:0 "Togolese"
+TOG_social_democrat_DEF:0 "Togolese Federation"
+TOG_social_liberal:0 "Togolese Federation"
+TOG_social_liberal_ADJ:0 "Togolese"
+TOG_social_liberal_DEF:0 "Togolese Federation"
+TOG_syndicalist:0 "Combined Togolese Communes"
+TOG_syndicalist_ADJ:0 "Togolese"
+TOG_syndicalist_DEF:0 "Combined Togolese Communes"
+TOG_totalist:0 "Togoland Commune"
+TOG_totalist_ADJ:0 "Togolese"
+TOG_totalist_DEF:0 "Togoland Commune"
+
+
+TOG_authoritarian_democrat:0 "Malawi"
+TOG_authoritarian_democrat_ADJ:0 "Malawian"
+TOG_authoritarian_democrat_DEF:0 "Malawi"
+TOG_market_liberal:0 "Malawian Federation"
+TOG_market_liberal_ADJ:0 "Malawian"
+TOG_market_liberal_DEF:0 "Malawian Federation"
+TOG_national_populist:0 "Togo"
+TOG_national_populist_ADJ:0 "Malawian"
+TOG_national_populist_DEF:0 "Togo"
+TOG_paternal_autocrat:0 "Malawi"
+TOG_paternal_autocrat_ADJ:0 "Malawian"
+TOG_paternal_autocrat_DEF:0 "Malawi"
+TOG_radical_socialist:0 "Socialist Federation of Malawi"
+TOG_radical_socialist_ADJ:0 "Malawian"
+TOG_radical_socialist_DEF:0 "Socialist Federation of Malawi"
+TOG_social_conservative:0 "Togo Federation"
+TOG_social_conservative_ADJ:0 "Malawian"
+TOG_social_conservative_DEF:0 "Togo Federation"
+TOG_social_democrat:0 "Malawian Federation"
+TOG_social_democrat_ADJ:0 "Malawian"
+TOG_social_democrat_DEF:0 "Malawian Federation"
+TOG_social_liberal:0 "Malawian Federation"
+TOG_social_liberal_ADJ:0 "Malawian"
+TOG_social_liberal_DEF:0 "Malawian Federation"
+TOG_syndicalist:0 "Combined Malawian Communes"
+TOG_syndicalist_ADJ:0 "Malawian"
+TOG_syndicalist_DEF:0 "Combined Malawian Communes"
+TOG_totalist:0 "Malawi Commune"
+TOG_totalist_ADJ:0 "Malawian"
+TOG_totalist_DEF:0 "Malawi Commune"
+
